# sonar

./: .gitignore  CLAUDE.md  LEARNINGS.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.claude/commands/opsx/: audit.md  propose.md
.github/workflows/: ci.yml  snowflake-live.yml
eval/: chembl_search.yaml
eval-runs/: adventureworks-baseline-001.json  adventureworks-iter1-001.json  chembl-baseline-001.json  chembl-iter1-001.json  cms-synpuf-baseline-001.json  cms-synpuf-iter1-001.json  cms-synpuf-iter2-001.json  faers-baseline-001.json  faers-iter1-001.json  faers-iter1-002.json  faers-iter1-003.json  faers-iter1-004.json  lahman-baseline-001.json  lahman-iter1-001.json  tpcds-baseline-001.json  tpcds-iter1-001.json
openspec/changes/context-index/: design.md  tasks.md
openspec/changes/mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/snowflake-connector/: design.md  proposal.md  tasks.md
openspec/specs/bigquery-connector/: spec.md
openspec/specs/context-index/: spec.md
openspec/specs/description-engine/: spec.md
openspec/specs/duckdb-connector/: spec.md
openspec/specs/eval-descriptions/: spec.md
openspec/specs/evaluation-toolkit/: spec.md
openspec/specs/llm-client/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/openai-llm-client/: spec.md
openspec/specs/postgres-connector/: spec.md
openspec/specs/relationship-mapping/: spec.md
openspec/specs/scan-output/: spec.md
openspec/specs/snowflake-connector/: spec.md
src/sonar/: __init__.py  _dsn.py  cli.py  relationships.py  scan_output.py  search.py
src/sonar/connectors/: CLAUDE.md  __init__.py  _bigquery_sql.py  _cursor_utils.py  _duckdb_sql.py  _snowflake_sql.py  _sql.py  bigquery.py  duckdb.py  postgres.py  serialize.py  snowflake.py  types.py
src/sonar/engine/: CLAUDE.md  __init__.py  _anthropic.py  _openai.py  _prompts.py  describe.py  llm.py  relationships.py
src/sonar/eval/: __init__.py  _artifact.py  _prompts.py  _report.py  _types.py  descriptions.py  diff.py  quality.py  relationships.py  search.py
src/sonar/index/: __init__.py  bundle.py  store.py
src/sonar/mcp/: CLAUDE.md  __init__.py  audit.py  server.py
tests/: conftest.py  test_bigquery_connector.py  test_bundle.py  test_cli.py  test_description_engine.py  test_dsn.py  test_duckdb_connector.py  test_eval_artifact.py  test_eval_cli.py  test_eval_descriptions.py  test_eval_diff.py  test_eval_quality.py  test_eval_relationships.py  test_eval_report.py  test_eval_search.py  test_llm_client.py  test_mcp_audit.py  test_mcp_bundle_tools.py  test_mcp_sample_integration.py  test_mcp_sample_tool.py  test_mcp_server.py  test_openai_client.py  test_postgres_connector.py  test_relationships.py  test_scan.py  test_scan_output.py  test_snowflake_connector.py  test_snowflake_live.py  test_store.py
tests/fixtures/: init.sql
tests/fixtures/adventureworks/: Dockerfile  load-adventureworks.sh
(+74 files in other folders)
