[tool.poetry]
name = "sonar-ai"
version = "0.1.0"
description = "Data context for AI agents. Auto-discovers schema, generates semantic descriptions, exposes via MCP."
authors = ["Joeri van Wijngaarden <joeri@tingi.dev>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "sonar", from = "src"}]
keywords = ["mcp", "ai", "agents", "data-context", "schema-discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.49"
psycopg = {version = "^3.2", extras = ["binary"]}
mcp = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.8"

[tool.poetry.scripts]
sonar = "sonar.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
