[tool.poetry]
name = "sonar-ai"
version = "0.1.0"
description = "Data context for AI agents. Auto-discovers schema, generates semantic descriptions, exposes via MCP."
authors = ["Joeri van Wijngaarden <joeri@tingi.dev>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "sonar", from = "src"}]
keywords = ["mcp", "ai", "agents", "data-context", "schema-discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.49"
openai = "^1.0"
psycopg = {version = "^3.2", extras = ["binary"]}
mcp = "^1.0"
PyYAML = "^6.0"
snowflake-connector-python = {version = "^3.12", optional = true}
duckdb = {version = ">=0.10.0", optional = true}

[tool.poetry.extras]
snowflake = ["snowflake-connector-python"]
duckdb = ["duckdb"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0"
ruff = "^0.8"
fakesnow = "^0.9"

[tool.poetry.scripts]
sonar = "sonar.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=sonar --cov-report=term-missing"
markers = [
    "integration: tests that require a live Postgres (see docker-compose.yml)",
    "snowflake_live: tests that require a real Snowflake account (skipped by default; run on push-to-main and workflow_dispatch)",
]

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
